# video_sentiment_model

./: .gitignore  pyproject.toml  train_model.py  train_sagemaker.py
deployment/: converting_mode.py  deploy.py  deploy_endpoint.py  inference.py  model.py  requirements.txt
deployment/deploy/: inference.py
training/: count_params.py  install_ffmpeg.py  meld_training.py  models.py  train_aws.py
