[project]
name = "video-sentiment-model"
version = "0.1.0"
description = ""
authors = [
    {name = "rvishakhs",email = "rvishakhs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "transformers (>=4.52.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "torchaudio (>=2.7.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]

[tool.poetry]
packages = [{include = "video_sentiment_model", from = "src"}]


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
torchaudio = {source = "pytorch"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
